# arcfetch

./: .SRCINFO  AGENTS.md  Cargo.toml  PKGBUILD  README.md  flake.nix  install.sh
src/: cache.rs  config.rs  cosmic.rs  info.rs  logos.rs  main.rs  mandelbrot.rs  pkgs.rs
