[package]
name        = "arcfetch"
version     = "0.7.3"
edition = "2021"
description = "Blazing-fast Arch Linux sysinfo — Catppuccin Mocha"

[[bin]]
name = "arcfetch"
path = "src/main.rs"

[dependencies]
libc = "0.2"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = true
panic         = "abort"
