[package]
name        = "arcfetch"
version     = "1.0.7"
edition = "2021"
description = "Blazing-fast Arch Linux sysinfo"

[[bin]]
name = "arcfetch"
path = "src/main.rs"

[dependencies]
libc = "0.2"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = true
panic         = "abort"
